--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "liveServer.settings.port": 5502
+  "liveServer.settings.port": 5502,
+  "cSpell.words": [
+    "Ebird",
+    "Ebirds",
+    "Horry",
+    "navlinks",
+    "Psycopg",
+    "Stanberry",
+    "Technololgies"
+  ]
 }
